--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,23 @@
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
+		android:name=".GalleryApplication"
 		android:theme="@style/AppTheme" >
+		
+		<!-- Entry -->
+		<activity
+			android:name=".GalleryActivity"
+			android:icon="@drawable/ic_launcher"
+			android:label="@string/app_name"
+			android:launchMode="singleTask">
+
+			<intent-filter>
+				<category android:name="android.intent.category.LAUNCHER"/>
+				<action android:name="android.intent.action.MAIN"/>
+			</intent-filter>
+
+		</activity>
+
 	</application>
 
 </manifest>
