--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,11 @@
 	<uses-sdk
 		android:minSdkVersion="22"
 		android:targetSdkVersion="22" />
+	
+	<!-- Permissions -->
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
+	<!-- Application -->
 	<application
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
