--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,10 +20,12 @@
 		
 		<!-- Entry -->
 		<activity
-			android:name=".GalleryActivity"
+			android:name=".OPGalleryActivity"
 			android:icon="@drawable/ic_launcher"
 			android:label="@string/app_name"
-			android:launchMode="singleTask">
+			android:launchMode="singleTask"
+			android:screenOrientation="sensorPortrait"
+			android:theme="@style/GalleryWindow">
 
 			<intent-filter>
 				<category android:name="android.intent.category.LAUNCHER"/>
