--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,8 @@
 	<!-- Application -->
 	<application
 		android:allowBackup="true"
-		android:icon="@drawable/ic_launcher"
+		android:largeHeap="true"
+		android:icon="@drawable/app_icon"
 		android:label="@string/app_name"
 		android:name=".GalleryApplication"
 		android:theme="@style/AppTheme" >
@@ -21,7 +22,7 @@
 		<!-- Entry -->
 		<activity
 			android:name=".OPGalleryActivity"
-			android:icon="@drawable/ic_launcher"
+			android:icon="@drawable/app_icon"
 			android:label="@string/app_name"
 			android:launchMode="singleTask"
 			android:screenOrientation="sensorPortrait"
