--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
 		android:largeHeap="true"
 		android:icon="@drawable/app_icon"
 		android:label="@string/app_name"
-		android:name=".GalleryApplication"
+		android:name=".OPGalleryApplication"
 		android:theme="@style/AppTheme" >
 		
 		<!-- Entry -->
